victoriametrics/ops/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vmalertmanager
  namespace: guardian
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`alertmanager.naturalselectionlabs.com`)
      services:
        - name: vmalertmanager-victoriametrics
          port: 9093
      middlewares:
        - name: traefik-forward-auth
